--- a/fastwebservice/browser-provider/pom.xml
+++ b/fastwebservice/browser-provider/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>browser-provider</artifactId>
 
     <properties>
-        <build.encoding>UTF-8</build.encoding>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <build>
