--- a/fastwebservice/server-engine/pom.xml
+++ b/fastwebservice/server-engine/pom.xml
@@ -66,6 +66,7 @@
     <properties>
         <spring.version>4.3.11.RELEASE</spring.version>
         <hibernate.version>4.3.10.Final</hibernate.version>
+        <btm.version>2.1.3</btm.version>
         <spring-data.version>1.11.7.RELEASE</spring-data.version>
     </properties>
     <!--依赖信息-->
@@ -182,6 +183,11 @@
             <artifactId>hibernate-entitymanager</artifactId>
             <version>${hibernate.version}</version>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.codehaus.btm</groupId>-->
+            <!--<artifactId>btm</artifactId>-->
+            <!--<version>${btm.version}</version>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>net.sf.ehcache</groupId>
             <artifactId>ehcache</artifactId>
